--- a/learing1.html
+++ b/learing1.html
@@ -89,7 +89,7 @@
 <body>
   <div class="container">
     <h1>Welcome to FutChron X</h1>
-    <button class="enter-btn" onclick="enterMainPage()">試験運用に参加する（Try）</button>
+    <button class="enter-btn" onclick="enterMainPage()">WEBテストに参加する</button>
   </div>
 
   <script>
