--- a/adminlearingsystem.html
+++ b/adminlearingsystem.html
@@ -3,63 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理者画面</title>
+    <title>WEB小テスト 管理者画面</title>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
     <style>
-        /* Add your styles here */
+        body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
+        header, footer { text-align: center; background-color: #007BFF; color: white; padding: 10px; border-radius: 8px; }
+        main { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); }
+        h1, h2 { color: #333; }
+        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+        th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
+        th { background-color: #f7f7f7; }
+        #overall-correct-rate, .question-correct-rate { font-weight: bold; }
+        .btn { background-color: #007BFF; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; margin: 10px 0; }
+        .btn:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
+    <header>
+        <h1>WEB小テスト 管理者画面</h1>
+    </header>
+    <main>
+        <h2>受験者全体の正答率</h2>
+        <p id="overall-correct-rate">全体の正答率: 0%</p>
 
-    <h1>管理者画面</h1>
-    <button onclick="grantAccess()">ステージ5へのアクセスを許可</button>
+        <h2>各問題の正答率</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>問題</th>
+                    <th>正答率</th>
+                </tr>
+            </thead>
+            <tbody id="question-correct-rate-body">
+                <!-- ここにデータが追加されます -->
+            </tbody>
+        </table>
 
-    <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js';
-        import { getFirestore, setDoc, doc } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore.js';
-        import { getAuth } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-auth.js';
+        <h2>受験者の得点</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>受験者名</th>
+                    <th>得点</th>
+                </tr>
+            </thead>
+            <tbody id="results-table-body">
+                <!-- ここにデータが追加されます -->
+            </tbody>
+        </table>
+        
+        <button class="btn" onclick="fetchResponses()">データを更新</button>
+    </main>
+    <footer>
+        <p>&copy; 2024 WEB小テスト</p>
+    </footer>
 
+    <script>
+        // Firebaseの設定
         const firebaseConfig = {
-            apiKey: "AIzaSyDN9KQ50hwjlzFNc26aMOCS0H06JwggY68",
-            authDomain: "honkoku-hiroba-21400.firebaseapp.com",
-            projectId: "honkoku-hiroba-21400",
-            storageBucket: "honkoku-hiroba-21400.appspot.com",
-            messagingSenderId: "909469448032",
-            appId: "1:909469448032:web:8c62f7f2a978c711cd9005",
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_PROJECT_ID.appspot.com",
+            messagingSenderId: "YOUR_SENDER_ID",
+            appId: "YOUR_APP_ID"
         };
 
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
+        // Firebaseを初期化
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
 
-        function grantAccess() {
-            // Logic to grant access to stage5.html, possibly storing in Firestore
-            const userId = prompt("ユーザーIDを入力してください");
-            setDoc(doc(db, 'access', userId), { accessGranted: true })
-                .then(() => {
-                    alert("アクセスが許可されました。");
-                })
-                .catch((error) => {
-                    console.error("エラー:", error);
+        // Firestoreからデータを取得して表示
+        function fetchResponses() {
+            db.collection('responses').onSnapshot((snapshot) => {
+                const resultsTable = document.getElementById('results-table-body');
+                const questionCorrectRateBody = document.getElementById('question-correct-rate-body');
+                resultsTable.innerHTML = ''; // 得点テーブルをクリア
+                questionCorrectRateBody.innerHTML = ''; // 問題正答率テーブルをクリア
+
+                let totalCorrectCount = 0;
+                let totalResponses = snapshot.size;
+                let questionCorrectCounts = {
+                    question1: { correct: 0, total: 0 },
+                    question2: { correct: 0, total: 0 }
+                };
+
+                snapshot.forEach((doc) => {
+                    const data = doc.data();
+                    totalCorrectCount += data.correctCount;
+
+                    // 得点を表示
+                    resultsTable.innerHTML += `
+                        <tr>
+                            <td>${data.userName}</td>
+                            <td>${data.score}</td>
+                        </tr>
+                    `;
+
+                    // 各問題の正答数をカウント
+                    if (data.correctCount > 0) {
+                        questionCorrectCounts.question1.correct += (data.question1Answer === 'A') ? 1 : 0; // 正解は'A'と仮定
+                        questionCorrectCounts.question1.total += 1;
+
+                        questionCorrectCounts.question2.correct += (data.question2Answer === '正しい解答') ? 1 : 0; // 正解は'正しい解答'と仮定
+                        questionCorrectCounts.question2.total += 1;
+                    }
                 });
+
+                // 正答率を計算して表示
+                for (const [key, value] of Object.entries(questionCorrectCounts)) {
+                    const rate = value.total > 0 ? (value.correct / value.total) * 100 : 0;
+                    questionCorrectRateBody.innerHTML += `
+                        <tr>
+                            <td>${key}</td>
+                            <td>${rate.toFixed(2)}%</td>
+                        </tr>
+                    `;
+                }
+
+                // 全体の正答率を計算
+                const overallCorrectRate = totalResponses > 0 ? (totalCorrectCount / (totalResponses * 2)) * 100 : 0; // 2は問題数
+                document.getElementById('overall-correct-rate').innerText = `全体の正答率: ${overallCorrectRate.toFixed(2)}%`;
+            });
         }
-        onAuthStateChanged(auth, (user) => {
-    if (user) {
-        currentUser = user;
 
-        // Check if access is granted
-        const accessRef = doc(db, 'access', currentUser.uid);
-        getDoc(accessRef).then((docSnap) => {
-            if (!docSnap.exists() || !docSnap.data().accessGranted) {
-                alert("このステージへのアクセスは許可されていません。");
-                window.location.href = 'stage_selection.html'; // Redirect if access is not granted
-            }
-        });
-    } else {
-        window.location.href = 'login.html'; // Redirect to login if not authenticated
-    }
-});
-
+        // ページが読み込まれたら結果を取得
+        window.onload = fetchResponses;
     </script>
-
 </body>
 </html>
+
