--- a/export.html
+++ b/export.html
@@ -127,7 +127,6 @@
         #back-button:hover {
             background-color: #5a6268;
         }
-        /* 省略されたスタイルはそのまま */
     </style>
 </head>
 <body>
@@ -138,7 +137,7 @@
         <table>
             <thead>
                 <tr>
-                    <th><input type="checkbox" id="select-all"></th> <!-- 全選択用チェックボックス -->
+                    <th><input type="checkbox" id="select-all"></th> 
                     <th>資料名</th>
                     <th>活字化入力</th>
                     <th>所蔵</th>
