--- a/member.html
+++ b/member.html
@@ -152,9 +152,12 @@
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); 
     gap: 20px; 
     padding: 20px;
-    margin: 0 auto; 
-    max-width: 1200px; 
-}
+    margin-left: 0; 
+    max-width: 1200px;
+    justify-content: start;
+        }
+
+
 
 .timeline-entry {
     display: flex;
@@ -326,7 +329,7 @@
 </head>
 <body>
     <header>
-        <h1>みんなの活字化広場　version24.4🚀</h1>
+        <h1>みんなの活字化広場　version24.3🚀</h1>
         <div class="header-right">
             <p id="welcomeMessage">ようこそ、会員様！</p>
             <button id="logout">ログアウト</button>
