--- a/project.html
+++ b/project.html
@@ -6,106 +6,136 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プロジェクト一覧</title>
     <style>
-    body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #000428; /* 固定背景色 */
+    color: #fff;
     margin: 0;
     padding: 20px;
+    overflow-x: hidden;
 }
 
 h1 {
     margin-bottom: 20px;
-    font-size: 32px;
-    color: #444;
+    font-size: 42px;
+    color: #e0e0e0;
     text-align: center;
+    text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    animation: textFadeIn 3s ease-in-out;
+}
+
+@keyframes textFadeIn {
+    0% { opacity: 0; transform: translateY(-20px); }
+    100% { opacity: 1; transform: translateY(0); }
 }
 
 .gallery, #image-list {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: flex-start; /* 左揃えに変更 */
+    opacity: 0;
+    animation: fadeIn 2s ease-in-out 1.5s forwards;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 .folder-card, .image-card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: 2px solid transparent;
-    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border: 1px solid transparent;
+    transition: transform 0.4s ease, box-shadow 0.4s ease, border-color 0.4s ease;
     cursor: pointer;
-    width: calc(33.33% - 30px);
-    max-width: 280px;
+    width: calc(25% - 40px);
+    max-width: 300px;
     position: relative;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
 }
 
 .folder-card:hover, .image-card:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    border-color: #00cc99; 
+    transform: translateY(-10px);
+    box-shadow: 0 10px 30px rgba(255, 255, 255, 0.4);
+    border-color: #00d4ff;
 }
 
 .folder-info {
-    padding: 15px;
-    font-size: 18px;
+    padding: 20px;
+    font-size: 20px;
     text-align: center;
-    font-weight: bold;
-    color: #00cc99;
-    background-color: #f9f9f9;
-    border-top: 2px solid #00cc99;
+    font-weight: 500;
+    color: #00d4ff;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-top: 2px solid #00d4ff;
 }
 
 .image-list-header {
     width: 100%;
-    padding: 15px;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: #fff;
-    color: #00cc99;
+    padding: 20px;
+    font-size: 24px;
+    font-weight: 600;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #00d4ff;
     text-align: center;
-    margin-bottom: 15px;
-    border-bottom: 2px solid #00cc99;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #00d4ff;
+    animation: textFadeIn 3s ease-in-out 1s forwards;
 }
 
 .image-card img {
     width: 100%;
     height: auto;
-    object-fit: contain;
-    border-bottom: 2px solid #00cc99;
+    object-fit: cover;
+    border-bottom: 2px solid #00d4ff;
+    opacity: 0.9;
+    transition: opacity 0.3s ease;
+}
+
+.image-card img:hover {
+    opacity: 1;
 }
 
 .image-name {
-    padding: 10px;
+    padding: 15px;
     text-align: center;
-    font-size: 14px;
-    color: #666;
+    font-size: 16px;
+    font-weight: 500;
+    color: #00d4ff;
 }
 
 .button-container {
     display: flex;
     justify-content: center;
-    margin: 30px 0;
+    margin: 40px 0;
 }
 
 .button {
-    padding: 15px 30px;
-    font-size: 16px;
+    padding: 15px 35px;
+    font-size: 18px;
     cursor: pointer;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
     color: #fff;
-    background-color: #00cc99;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    background-color: #00d4ff;
+    transition: background-color 0.4s ease, transform 0.4s ease;
 }
 
 .button:hover {
-    background-color: #00997a;
-    transform: scale(1.03);
+    background-color: #00a6cc;
+    transform: scale(1.05);
 }
 
 .hidden {
     display: none;
 }
+
+
 
     </style>
 </head>
@@ -220,5 +250,3 @@ h1 {
     <button onclick="location.href='member.html'">メンバーページに戻る</button>
 </body>
 </html>
-
-
