--- a/version.html
+++ b/version.html
@@ -108,7 +108,7 @@
             <button onclick="location.href='webusing.html'">WEBサイトご利用案内</button>
             <button onclick="location.href='FAQ.html'">FAQページ</button>
             <button onclick="location.href='support.html'">サポートセンター</button>
-            <button onclick="location.href='priv.html'">利用規約・プライバシーの暗示</button>
+            <button onclick="location.href='priv.html'">利用規約・プライバシーポリシー</button>
             <button onclick="location.href='vvinformation.html'">version詳細</button>
             <button onclick="location.href='aouto.html'">推奨環境の情報</button>
             <button onclick="location.href='EAP.html'">Exclusive Access Page</button>
