--- a/latest-edits.html
+++ b/latest-edits.html
@@ -20,9 +20,9 @@ h1 {
 
 #timeline {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3列のグリッド */
+    grid-template-columns: repeat(3, 1fr); 
     gap: 15px;
-    max-width: 900px; /* 幅を広げて調整 */
+    max-width: 900px; 
     margin: 0 auto;
 }
 
