--- a/vvinformation.html
+++ b/vvinformation.html
@@ -102,7 +102,17 @@
     <div class="container">
         <h1>バージョン履歴</h1>
         <ul class="version-history">
-            
+            <li>
+                <div class="version-title">version24.4🚀</div>
+                <div class="version-date">2024年10月17日</div>
+                <div class="version-desc">
+                    -資料検索システムの導入<br>
+                    -最近の編集者の表示変更<br>
+                    -各ページにおけるデザインの微調整<br>
+                  
+                </div>
+            </li>
+
             <li>
                 <div class="version-title">version24.3🚀</div>
                 <div class="version-date">2024年9月27日</div>
