--- a/text_entry_page.html
+++ b/text_entry_page.html
@@ -219,8 +219,8 @@
             </div>
             <div id="bibliography" class="tab-content">
                 <div class="input-group">
-                    <label for="material-name">資料名（必須）:</label>
-                    <input id="material-name" type="text" placeholder="資料名を入力してください">
+                    <label for="material-name">資料名（必須）※半角数字のみ！:</label>
+                    <input id="material-name" type="text" placeholder="半角数字で入力してください">
                 </div>
                 <div class="input-group">
                     <label for="collection">所蔵:</label>
@@ -456,6 +456,8 @@
         window.addEventListener('resize', adjustImagePosition);
 
         loadTimeline();
+
     </script>
+
 </body>
 </html>
