--- a/contactemail.html
+++ b/contactemail.html
@@ -8,93 +8,102 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
+            background-color: #e9ecef;
+            color: #343a40;
             text-align: center;
             margin: 0;
-            padding: 50px;
+            padding: 0;
         }
         .container {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin: auto;
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 6px 30px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+            margin: 50px auto;
             padding: 40px;
+            position: relative;
         }
         h1 {
             color: #007BFF;
             margin-bottom: 20px;
-            font-size: 24px;
+            font-size: 28px;
+            font-weight: bold;
         }
         p {
             margin-bottom: 30px;
-            font-size: 16px;
+            font-size: 18px;
             line-height: 1.5;
         }
         .contact-button {
             display: inline-block;
-            padding: 12px 30px;
-            font-size: 18px;
+            padding: 15px 35px;
+            font-size: 20px;
             color: white;
             background-color: #007BFF;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             text-decoration: none;
-            transition: background-color 0.3s, transform 0.2s;
+            transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
         }
         .contact-button:hover {
             background-color: #0056b3;
             transform: translateY(-2px);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
         }
         footer {
             margin-top: 30px;
             font-size: 14px;
             color: #666;
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
         }
 
         .btn-back {
-    position: fixed; 
-    bottom: 420px; 
-    left: 50%;
-    transform: translateX(-50%); 
-    background-color: #ff5252;
-    color: white;
-    padding: 14px 40px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1.1em;
-    width: 100%;
-    max-width: 250px;
-    margin: 0 auto;
-   
-}
+            background-color: #ff5252;
+            color: white;
+            padding: 14px 40px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 1.2em;
+            margin-top: 20px;
+            transition: background-color 0.3s, transform 0.2s;
+        }
 
+        .btn-back:hover {
+            background-color: #ff1744;
+            transform: translateY(-2px);
+        }
 
         @media (max-width: 768px) {
-    body {
-        padding: 20px; 
-    }
+            body {
+                padding: 20px; 
+            }
 
-    .container {
-        padding: 20px; 
-    }
+            .container {
+                padding: 20px; 
+            }
 
-    h1 {
-        font-size: 20px; 
-    }
+            h1 {
+                font-size: 24px; 
+            }
 
-    p {
-        font-size: 14px;
-    }
+            p {
+                font-size: 16px;
+            }
 
-    .contact-button {
-        padding: 10px 20px;
-        font-size: 16px; 
-    }
-}
+            .contact-button {
+                padding: 10px 20px;
+                font-size: 18px; 
+            }
+
+            .btn-back {
+                font-size: 1em;
+                padding: 12px 30px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -102,9 +111,9 @@
     <div class="container">
         <h1>お問い合わせ</h1>
         <p>お問い合わせ可能な項目<br>
-        ・パスワードを忘れた（変更依頼）<br>
-        ・エラーに関する質問　　　　　　<br>
-        ・WEBサイトの機能（使い方）　　</p>
+        <span>&#x1F4E8;</span> パスワードを忘れた（変更依頼）<br>
+        <span>&#x2753;</span> エラーに関する質問<br>
+        <span>&#x1F4E7;</span> WEBサイトの機能（使い方）</p>
         <a class="contact-button" href="https://mail.google.com/mail/?view=cm&fs=1&to=ea21002@wesleyan.ac.jp,yoshino@wesleyan.ac.jp&su=お問い合わせ&body=【お名前】%0A【メールアドレス】%0A【お問い合わせ内容】%0A%0A以下にお問い合わせ内容を記入してください。">
             お問い合わせメールを送る
         </a>
