--- a/admin.html
+++ b/admin.html
@@ -165,6 +165,7 @@
                 <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
                 
                 <a href="export.html" class="link-button">データ出力 for Excel</a>
+                <a href="allsarch.html" class="link-button">資料検索システム</a>
                 <a href="auth.html" class="link-button">ログイン履歴管理システム</a>
             </section>
             
