--- a/announcements.html
+++ b/announcements.html
@@ -41,7 +41,7 @@
         }
 
         main {
-            margin-top: 120px; /* ヘッダー分の余白 */
+            margin-top: 120px; 
             padding: 20px;
         }
 
@@ -130,7 +130,7 @@
 
     <main>
         <div class="announcement-section">
-            <h2>最新のお知らせ</h2>
+            
             <div class="announcement-list">
                 <ul id="announcement-list">
                     
