--- a/allsarch.html
+++ b/allsarch.html
@@ -75,11 +75,11 @@
         <div class="search-container">
             <div class="search-group">
                 <label for="title-search">資料名で検索（数字とハイフン）</label>
-                <input type="text" id="title-search" placeholder="資料名を入力（半角入力のみ）">
+                <input type="text" id="title-search" placeholder="例「2-2-2」（半角入力のみ）">
             </div>
             <div class="search-group">
                 <label for="keyword-search">キーワードで検索</label>
-                <input type="text" id="keyword-search" placeholder="キーワードを入力">
+                <input type="text" id="keyword-search" placeholder="例「佐賀」「担当者名」「小城」">
             </div>
             
             <button id="search-button">検索</button>
