--- a/member.html
+++ b/member.html
@@ -287,7 +287,7 @@
   top: 1px;
 }
 
-.button-container {
+.buttcontainer {
     display: flex;
     gap: 30px; 
 }
@@ -397,7 +397,7 @@
 
         <div class="button-container">
             <a href="allsarch.html" class="rainbow-button">資料検索システム</a>
-            <a href="membermobile.html" class="rainbow-button">スマホ版へ</a>
+            <a href="#" class="rainbow-button">モバイル版サイト</a>
             <a href="#" class="rainbow-button">準備中</a>
         </div>
 
