--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ main {
     <header>
         <h1>ようこそ！！みんなの活字化広場へ</h1>
         <nav>
-            <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
+            <button class="nav-btn" onclick="location.href='https://yuyawesleyan.github.io/MinnaTextHub.M/'">モバイル版サイト</button>
             <button class="nav-btn" onclick="location.href='support.html'">お問い合わせ</button>
             <button class="nav-btn" onclick="location.href='itsweb.html'">本WEBサイトについて</button>
             <button class="nav-btn" onclick="location.href='guide.html'">ご登録案内</button>
