--- a/member.html
+++ b/member.html
@@ -397,7 +397,7 @@
 
         <div class="button-container">
             <a href="allsarch.html" class="rainbow-button">資料検索システム</a>
-            <a href="#" class="rainbow-button">モバイル版サイト</a>
+            <a href="eer.html" class="rainbow-button">モバイル版サイト</a>
             <a href="#" class="rainbow-button">準備中</a>
         </div>
 
