--- a/eer.html
+++ b/eer.html
@@ -45,8 +45,8 @@
 <body>
     <div class="container">
         <h1>開発中...</h1>
-        <p>只今、モバイル版「みんなの活字化広場」を開発しています。<br>進捗率：４０％</p>
-        <img src="cree.png" alt="工事中のイラスト">
+        <p>只今、モバイル版「みんなの活字化広場」を開発しています。<br>進捗率：</p>
+        <img src="cree.png" alt="イラスト">
     </div>
 </body>
 </html>
