--- a/eer.html
+++ b/eer.html
@@ -45,7 +45,7 @@
 <body>
     <div class="container">
         <h1>開発中...</h1>
-        <p>只今、モバイル版「みんなの活字化広場」を開発しています。<br>進捗率：</p>
+        <p>２０２４年１０月２４日２３時リリース<br>進捗率：100%</p>
         <img src="cree.png" alt="イラスト">
     </div>
 </body>
