--- a/eer.html
+++ b/eer.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>開発中...</h1>
+        <h1>最終チェック中</h1>
         <p>２０２４年１０月２４日２３時リリース<br>進捗率：100%</p>
         <img src="cree.png" alt="イラスト">
     </div>
